--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Saldi</a>
+                <a class="nav-link" href="#saldi">Saldi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Welcome Summer</a>
+                <a class="nav-link" href="#welcome-summer">Welcome Summer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Last Minute</a>
+                <a class="nav-link" href="#last-minute">Last Minute</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Recensioni</a>
+                <a class="nav-link" href="#recensioni">Recensioni</a>
               </li>
             </ul>
             <form class="d-flex mb-3" role="search">
@@ -75,7 +75,7 @@
         </div>
       </section>
       <!-- Sezione saldi -->
-      <section>
+      <section id="saldi">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center mb-3">
             <span class="fs-1">Saldi</span>
@@ -167,7 +167,7 @@
       </section>
 
       <!-- Sezione Welcome Summer -->
-      <section>
+      <section id="welcome-summer">
         <div class="container">
           <div
             class="d-flex justify-content-between align-items-center mt-5 mb-4"
@@ -347,7 +347,7 @@
         </div>
       </section>
       <!-- Sezione Last Minute -->
-      <section>
+      <section id="last-minute">
         <div class="container">
           <div
             class="d-flex justify-content-between align-items-center mt-5 mb-4"
@@ -405,8 +405,8 @@
           </div>
         </div>
       </section>
-      <!-- Sezione testimonianze -->
-      <section>
+      <!-- Sezione recensioni-->
+      <section id="recensioni">
         <div class="container">
           <h2 class="fs-1 fw-semibold mt-5 mb-4">Dicono di noi</h2>
           <div class="row">
