--- a/index.html
+++ b/index.html
@@ -322,20 +322,20 @@
         </div>
       </section>
       <!-- Sezione Offerta del giorno -->
-      <section class="d-none d-md-block">
+      <section >
         <div class="container">
           <div class="mt-5 mb-4">
             <span class="fs-1 fw-semibold">Offerta del giorno</span>
           </div>
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-8 col-sm-6">
               <img
                 src="./assets/img/maldive_2_344968-168199710493900.jpeg"
                 class="img-fluid rounded-3 shadow"
                 alt="da qualche parte nel mondo"
               />
             </div>
-            <div class="col-md-4">
+            <div class="col-4 col-sm-6">
               <h2 class="fs-1">Fushifaru Maldives</h2>
               <span class="font-monospace">15/01/2025 - 15/07/2025</span>
               <p class="lead">Ville a partire da 500 $, non fartele sfuggire!</p>
