--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             >
           </div>
           <div
-            class="row row-cols-2 row-cols-md-2 row-cols-lg-3"
+            class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3"
           >
             <div class="col">
               <div class="card border-0 shadow position-relative mb-2">
@@ -328,14 +328,14 @@
             <span class="fs-1 fw-semibold">Offerta del giorno</span>
           </div>
           <div class="row">
-            <div class="col-8 col-sm-6">
+            <div class="col-12 col-sm-6 col-md-8">
               <img
                 src="./assets/img/maldive_2_344968-168199710493900.jpeg"
                 class="img-fluid rounded-3 shadow"
                 alt="da qualche parte nel mondo"
               />
             </div>
-            <div class="col-4 col-sm-6">
+            <div class="col-12 col-sm-6 col-md-4">
               <h2 class="fs-1">Fushifaru Maldives</h2>
               <span class="font-monospace">15/01/2025 - 15/07/2025</span>
               <p class="lead">Ville a partire da 500 $, non fartele sfuggire!</p>
@@ -358,7 +358,7 @@
             >
           </div>
           <div
-            class="row row-cols-2 row-cols-md-3 row-cols-lg-6 g-2"
+            class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-6 g-2"
           >
             <div class="col">
               <img
