--- a/index.html
+++ b/index.html
@@ -328,14 +328,14 @@
             <span class="fs-1 fw-semibold">Offerta del giorno</span>
           </div>
           <div class="row">
-            <div class="col-12 col-sm-6 col-md-8">
+            <div class="col-12 col-sm-6 col-md-8 col-xl-9">
               <img
                 src="./assets/img/maldive_2_344968-168199710493900.jpeg"
                 class="img-fluid rounded-3 shadow"
                 alt="da qualche parte nel mondo"
               />
             </div>
-            <div class="col-12 col-sm-6 col-md-4">
+            <div class="col-12 col-sm-6 col-md-4 col-xl-3">
               <h2 class="fs-1">Fushifaru Maldives</h2>
               <span class="font-monospace">15/01/2025 - 15/07/2025</span>
               <p class="lead">Ville a partire da 500 $, non fartele sfuggire!</p>
