--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
           <div class="mt-5 mb-4">
             <span class="fs-1 fw-semibold">Offerta del giorno</span>
           </div>
-          <div class="row">
+          <div class="row gy-3">
             <div class="col-12 col-sm-6 col-md-8 col-xl-9">
               <img
                 src="./assets/img/maldive_2_344968-168199710493900.jpeg"
