--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="hamburger-menu">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-md-3">
+          <div class="collapse navbar-collapse ms-3 ms-lg-0" id="hamburger-menu">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="#recensioni">Recensioni</a>
               </li>
             </ul>
-            <form class="d-flex mb-3" role="search">
+            <form class="d-flex mb-3 mb-lg-0" role="search">
               <input
                 class="form-control me-2 "
                 type="search"
